2006-04-23  Don Allingham  <don@gramps-project.org>
	* src/GrampsCfg.py: remove familyview stuff
	* src/plugins/TestcaseGenerator.py: fix BIRTH, DEATH constants

2006-04-23  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_9): Delete column
	metadata.
	* src/PluginUtils/_PluginStatus.py (PluginTrace.__init__): Set
	scrolling policy to auto;
	(PluginTrace.close_window): Add method.

2006-04-22  Brian Matherly  <pez4brian@users.sourceforge.net>
	* src/PluginUtils/_ReportUtils.py: keep up with RelLib changes
	* src/plugins/NavWebPage.py: keep up with RelLib changes

2006-04-22  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py: pychecker
	* src/GrampsDb/_GrampsBSDDB.py: pychecker
	* src/RelLib/_CalSdn.py: pychecker
	* src/RelLib/_PrivateSourceNote.py: pychecker
	* src/RelLib/_GenderStats.py: pychecker
	* src/MergePeople.py: pychecker
	* src/SelectObject.py: pychecker
	* src/ScratchPad.py: pychecker
	* src/ImgManip.py: pychecker
	* src/docgen/ODFDoc.py: pychecker
	* src/docgen/OpenOfficeDoc.py: pychecker
	* src/docgen/LPRDoc.py: pychecker
	* src/SelectEvent.py: pychecker
	* src/GrampsDb/_ReadXML.py: fix Type str_from_xml calls
	* src/DataViews/_MediaView.py: Shorten tab name
	* src/DataViews/_RepositoryView.py: Shorten tab name
	* src/DataViews/_SourceView.py: Shorten tab name
	* src/DataViews/_EventView.py: Shorten tab name
	* src/DataViews/_FamilyView.py: Shorten tab name
	* src/DataViews/_FamilyList.py: Shorten tab name
	* src/DataViews/_PedigreeView.py: Shorten tab name
	* src/DataViews/_PlaceView.py: Shorten tab name
	* src/DataViews/_PersonView.py: Shorten tab name
	* src/DataViews/_MapView.py: Shorten tab name
	* src/glade/gramps.glade: remove unused option
	* src/const.py.in: bugtracker address fix

2006-04-21  Brian Matherly  <pez4brian@users.sourceforge.net>
	* src/PluginUtils/_ReportUtils.py: keep up with RelLib changes
	* src/plugins/DetDescendantReport.py: keep up with RelLib changes