@@ -1,4 +1,5 @@
 2006-04-23  Don Allingham  <don@gramps-project.org>
+	* src/ColumnOrder.py: preserved column width
 	* src/GrampsCfg.py: remove familyview stuff
 	* src/plugins/TestcaseGenerator.py: fix BIRTH, DEATH constants
 
